@@ -43,6 +43,10 @@ None
 
 Bug fixes since 1.4
 -------------------
+- LocalDate/LocalTime conostructors did not set internal state correctly
+  This problem was exposed when Days.daysBetween() and similar methods
+  failed to give the right results
+
 - ZoneInfoProvider now returns a copy of its internal state on getAvailableIDs
   This avoids race conditions on some JVMs
 
